--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
 
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body ng-app="ButtonDemo">
 
-  <div class="container">
+  <div class="container" ng-controller="ButtonController">
+
+  <button ng-click="clicked()">{{ counter() }} clicks</button>
 
   </div>
 
