--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <div class="container" ng-controller="ButtonController">
 
   <button ng-click="clicked()">{{ counter() }} clicks</button>
+  <button class="removeButton" ng-click="remove()">clear clicks</button>
 
   </div>
 
